[gd_scene load_steps=14 format=3 uid="uid://i4aubypnxhke"]

[ext_resource type="Script" uid="uid://crrxyg17t2at7" path="res://scripts/login_menu.gd" id="1_bmxdy"]
[ext_resource type="Texture2D" uid="uid://0sfy2gs22wmh" path="res://FknQrN.png" id="2_7i4bj"]
[ext_resource type="FontFile" uid="uid://4ivejuabvoq3" path="res://Game Bubble.ttf" id="3_0yvew"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rxj13"]
texture = ExtResource("2_7i4bj")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6hiwu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3gyab"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hy8w"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aau6d"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvcyp"]
bg_color = Color(0.65834, 0.65834, 0.65834, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psofu"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrodn"]
bg_color = Color(0.20871, 0.20871, 0.20871, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhxar"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wyuon"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="Login Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bmxdy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rxj13")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.5
offset_top = -44.0
offset_right = 210.5
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="NicknameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Prisijungimo vardas"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Slaptažodis"
max_length = 20
secret = true

[node name="Login Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_6hiwu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3gyab")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0hy8w")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_aau6d")
theme_override_styles/hover = SubResource("StyleBoxFlat_yvcyp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_psofu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vrodn")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_uhxar")
theme_override_styles/normal = SubResource("StyleBoxFlat_wyuon")
text = "Prisijungti
"

[node name="Register Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_6hiwu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3gyab")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0hy8w")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_aau6d")
theme_override_styles/hover = SubResource("StyleBoxFlat_yvcyp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_psofu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vrodn")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_uhxar")
theme_override_styles/normal = SubResource("StyleBoxFlat_wyuon")
text = "Registruotis
"

[node name="Password reset Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_6hiwu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3gyab")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0hy8w")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_aau6d")
theme_override_styles/hover = SubResource("StyleBoxFlat_yvcyp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_psofu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vrodn")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_uhxar")
theme_override_styles/normal = SubResource("StyleBoxFlat_wyuon")
text = "Pamirštas slaptažodis
"

[node name="Exit Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 37
theme_override_styles/focus = SubResource("StyleBoxEmpty_6hiwu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_3gyab")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0hy8w")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_aau6d")
theme_override_styles/hover = SubResource("StyleBoxFlat_yvcyp")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_psofu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_vrodn")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_uhxar")
theme_override_styles/normal = SubResource("StyleBoxFlat_wyuon")
text = "Išeiti"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.5
offset_top = -247.0
offset_right = 233.5
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_0yvew")
theme_override_font_sizes/font_size = 60
text = "CogniGame"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Login Button" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Register Button" to="." method="_on_register_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Password reset Button" to="." method="_on_password_reset_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
